<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <ImageButton
        android:id="@+id/arrow_back_create_reunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_arrow_back_24"></ImageButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/sujet_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow_back_create_reunion">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginHorizontal="10dp"
            android:id="@+id/sujet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_subject_24"
            android:drawablePadding="5dp"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="Sujet"
            android:inputType="textPersonName" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/participants_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sujet_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/participants"
            android:layout_marginHorizontal="10dp"
            android:drawableLeft="@drawable/ic_participants_group_add_24"
            android:drawablePadding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="Participants"
            android:inputType="textEmailAddress"
       ></com.google.android.material.textfield.TextInputEditText>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="séparé  par une virgule, point virgule, ou espace"
            android:layout_marginLeft="30dp"
            android:textStyle="italic"
            android:textColor="@color/grey"/>

        ></com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="23dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/salle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/participants_layout">

        <ImageView
            android:id="@+id/salle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic__location_on_24"></ImageView>

        <Spinner
            android:id="@+id/salle_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"></Spinner>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salle_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heure_de_d_but"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_access_time_24"
            android:drawablePadding="5dp"
            ></TextView>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@id/salle_layout"></TimePicker>
    </com.google.android.material.textfield.TextInputLayout>
       <TextView
           android:id="@+id/text_duree"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/duree_de_la_reunionText"
           android:textSize="18sp"
           android:textColor="@color/black"
           android:layout_marginLeft="@dimen/createReunionMarginLeft"
           app:layout_constraintTop_toBottomOf="@id/time_layout"
           app:layout_constraintStart_toStartOf="parent"
           android:drawableLeft="@drawable/ic_access_time_24"
           android:drawablePadding="5dp"

           ></TextView>
        <Spinner
            android:id="@+id/duree_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:entries="@array/Duree_Array"
            app:layout_constraintTop_toBottomOf="@+id/time_layout"
            app:layout_constraintStart_toEndOf="@id/text_duree"
            app:layout_constraintEnd_toEndOf="parent"
            ></Spinner>


    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date de la réunion :"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/duree_spinner"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:drawableLeft=""
        ></TextView>

<DatePicker
    android:layout_marginTop="20dp"
    android:id="@+id/date_picker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:datePickerMode="spinner"
    android:calendarViewShown="false"
    app:layout_constraintBottom_toTopOf="@id/fab_validate_reunion"
    app:layout_constraintTop_toBottomOf="@id/text_date"></DatePicker>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_validate_reunion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/ic_check_green_24"
        android:backgroundTint="@color/white"
        android:clickable="true"
        ></com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>