<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
...
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/delete_button_list"
        app:layout_constraintStart_toEndOf="@+id/reunion_list_image"
        app:layout_constraintTop_toTopOf="@+id/reunion_list_image"/>

    <TextView
        android:id="@+id/reunion_list_participants"
        android:textColor="@color/black"
...
